// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ControlToggleSet allOptions renders 1`] = `
<ControlWrapper
  id="testinput"
  themeControlWrapper="bg-red px12 py12"
  validationError="oh no!"
>
  <ControlLabel
    aside={
      <span>
        Aside text
      </span>
    }
    id="testinput"
    optional={true}
    text="All options"
    themeLabel="txt-s"
  />
  <textarea
    aria-invalid={true}
    aria-required={false}
    autoCapitalize="none"
    autoCorrect="off"
    autoFocus={true}
    className="w-full border--pink round-bold px12 py12"
    data-test="testinput-textarea"
    id="testinput"
    name="testinput"
    onChange={[Function]}
    placeholder="Some cool placeholder text"
    spellCheck={false}
    value="Some cool default value"
  />
</ControlWrapper>
`;

exports[`ControlToggleSet basic onChange gets called with input id and value 1`] = `
<ControlWrapper
  id="testinput"
  themeControlWrapper=""
>
  <ControlLabel
    id="testinput"
    optional={false}
    text="Basic"
    themeLabel="txt-s txt-bold mb6"
  />
  <textarea
    aria-required={true}
    className="textarea hmin120"
    data-test="testinput-textarea"
    id="testinput"
    name="testinput"
    onChange={[Function]}
    value=""
  />
</ControlWrapper>
`;

exports[`ControlToggleSet basic renders 1`] = `
<ControlWrapper
  id="testinput"
  themeControlWrapper=""
>
  <ControlLabel
    id="testinput"
    optional={false}
    text="Basic"
    themeLabel="txt-s txt-bold mb6"
  />
  <textarea
    aria-required={true}
    className="textarea hmin120"
    data-test="testinput-textarea"
    id="testinput"
    name="testinput"
    onChange={[Function]}
    value=""
  />
</ControlWrapper>
`;

exports[`ControlToggleSet disabled renders 1`] = `
<ControlWrapper
  id="testinput"
  themeControlWrapper=""
>
  <ControlLabel
    id="testinput"
    optional={false}
    text="Disabled"
    themeLabel="txt-s txt-bold mb6"
  />
  <textarea
    aria-required={true}
    className="textarea hmin120"
    data-test="testinput-textarea"
    disabled={true}
    id="testinput"
    name="testinput"
    onChange={[Function]}
    value=""
  />
</ControlWrapper>
`;
